@startuml

title __ASSIGNMENT's Class Diagram__\n

  namespace  {
    namespace ultithreading.assignment {
      class multithreading.assignment.Node {
          ~ data : int
      }
    }
  }
  

  namespace  {
    namespace ultithreading.assignment {
      class multithreading.assignment.TreeSizeCalculator {
          - es : ExecutorService
          + call()
          ~ TreeSizeCalculator()
      }
    }
  }
  

  multithreading.assignment.Node o-- multithreading.assignment.Node : left
  multithreading.assignment.Node o-- multithreading.assignment.Node : right
  multithreading.assignment.TreeSizeCalculator .up.|> java.util.concurrent.Callable
  multithreading.assignment.TreeSizeCalculator o-- multithreading.assignment.Node : root


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
